--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,5 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "avoid"
+  "jsxBracketSameLine": false
 }
